<resources>
    <string name="app_name">amora</string>
    <string name="signIn_text">Sign in to continue</string>
    <string name="continue_with_google_text">Continue with Google</string>
    <string name="terms_condition_text"><![CDATA[By continuing you agree to Amora’s Terms & Privacy Policy.]]></string>
    <string name="app_description_text">Find your match with Amora</string>
    <string name="default_web_client_id" translatable="false">1085935963960-19jtspurmk170kjtu4jpqie61bel40i9.apps.googleusercontent.com</string>
    <string name="on_boarding_activity_description">On Boarding Activity Design</string>
    <string name="get_started_text">Get Started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_like_description">Like Button</string>
    <string name="btn_chat_description">Chat Button</string>
    <string name="type_a_message">Type a message…</string>
    <string name="jennifer">Jennifer</string>
    <string name="online">Online</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="my_interests">My Interests</string>
    <string name="bio">Bio</string>
    <string name="frame_layout_description">Frame Layout Description</string>
    <string name="art">Art</string>
    <string name="traveling">Traveling</string>
    <string name="music">Music</string>
    <string name="cooking">Cooking</string>
    <string name="gaming">Gaming</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="city_country">City, Country</string>
    <string name="tell_others_a_bit_about_yourself">Tell others a bit about yourself</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="your_age">Your age</string>
    <string name="describe_yourself_in_a_few_lines">Describe yourself in a few lines</string>
    <string name="messages">Messages</string>
    <string name="discover">Discover</string>
    <string name="for_you_128">For You (128)</string>
    <string name="nearby_64">Nearby (64)</string>
    <string name="m_bloc_space_south_jakarta">M Bloc Space, South Jakarta</string>
    <string name="your_area">Your Area</string>
    <string name="_3">3</string>
    <string name="last_message_preview">Last message preview…</string>
    <string name="_9_41_pm">9:41 PM</string>
    <string name="hello">Hello!</string>
    <string name="hi">Hi!</string>
    <string name="_3_6_km_away">3.6 km away</string>
    <string name="_94">94%</string>
    <string name="elsa_japasal">Elsa Japasal</string>
    <string name="modeling">Modeling</string>
    <string name="photography">Photography</string>
    <string name="hiking">Hiking</string>
    <string name="i_m_a_passionate_individual_with_a_love_for_exploring_new_cultures_and_cuisines">I’m a passionate individual with a love for exploring new cultures and cuisines.</string>
    <string name="_3_2_km">3.2 km</string>
    <string name="_98">98%</string>
    <string name="add_photo">add_photo</string>
    <string name="back">back</string>
    <string name="more_options">more_options</string>
    <string name="drawn_to_quiet_corners_of_the_world_and_vibrant_city_life_alike_jade_finds_beauty_in_the_unexpected_she_believes_moments_are_best_remembered_when_felt_deeply_whether_it_s_a_sketch_on_a_napkin_or_a_song_at_midnight">Drawn to quiet corners of the world and vibrant city life alike, Jade finds beauty in the unexpected. She believes moments are best remembered when felt deeply — whether it’s a sketch on a napkin or a song at midnight.</string>
    <string name="actress">Actress</string>
    <string name="_0_7_km">0.7 km</string>
    <string name="jade_walker_24">Jade Walker, 24</string>
    <string name="photos">Photos</string>
    <string name="your_name">Your name</string>
</resources>